--- a/captionhtml/esmcaption.html
+++ b/captionhtml/esmcaption.html
@@ -68,17 +68,5 @@
 </div>
 <img class="img" src="rendering/demoimage.png" alt="An error has occurred loading your image.">
 </body>
-<script>twemoji.parse(document.body);</script>
-<script>
-
-
-    function outerHeight(element) {
-        const height = element.offsetHeight,
-            style = window.getComputedStyle(element)
-
-        return ['top', 'bottom']
-            .map(side => parseInt(style[`margin-${side}`]))
-            .reduce((total, side) => total + side, height)
-    }
-</script>
+<script src="rendering/common.js"></script>
 </html>
