--- a/captionhtml/givemeyourphone.html
+++ b/captionhtml/givemeyourphone.html
@@ -39,14 +39,5 @@
 </div>
 
 </body>
-<script>
-    function outerHeight(element) {
-        const height = element.offsetHeight,
-            style = window.getComputedStyle(element)
-
-        return ['top', 'bottom']
-            .map(side => parseInt(style[`margin-${side}`]))
-            .reduce((total, side) => total + side, height)
-    }
-</script>
+<script src="rendering/common.js"></script>
 </html>
