--- a/captionhtml/stuffstretch.html
+++ b/captionhtml/stuffstretch.html
@@ -80,12 +80,13 @@
         .row {
             background: white;
             display: flex;
-            flex:1;
+            flex: 1;
         }
 
         .stuff {
             width: 30%;
         }
+
         .stuff img {
             width: 100%;
         }
@@ -93,26 +94,12 @@
 </head>
 <body>
 
-
 <img class="img" src="rendering/demoimage.png" alt="An error has occurred loading your image.">
 <div class="row">
-
-    <div class="caption column"><span class="t">CaptionText</span></div>'
+    <div class="caption column"><span class="t">CaptionText</span></div>
     <img class="stuff column" src="rendering/Stuff.PNG" alt="stuff"/>
 </div>
 
 </body>
-<script>twemoji.parse(document.body);</script>
-<script>
-
-
-    function outerHeight(element) {
-        const height = element.offsetHeight,
-            style = window.getComputedStyle(element)
-
-        return ['top', 'bottom']
-            .map(side => parseInt(style[`margin-${side}`]))
-            .reduce((total, side) => total + side, height)
-    }
-</script>
+<script src="rendering/common.js"></script>
 </html>
