im gonna finish ZAMN tomorrow tbjh

--- a/rendering/positiondiv.html
+++ b/rendering/positiondiv.html
@@ -62,7 +62,7 @@
 <div id="textbox">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
-<img id="base" src="yskysn.png">
+<img id="base" src="zamn.png">
 <div id="sliders">
     <div>
         fitmode <input id="fitmode" type="checkbox">
