--- a/captionhtml/1984.html
+++ b/captionhtml/1984.html
@@ -26,7 +26,7 @@
         }
 
 
-        #textbox {
+        #speech {
             position: absolute;
             left: 60px;
             top: 17px;
@@ -90,5 +90,6 @@
         }
         fit("textbox")
     }
+
 </script>
 </html>
