minor formatting fixes to zamn

--- a/captionhtml/1984.html
+++ b/captionhtml/1984.html
@@ -64,6 +64,13 @@
         .fitboxes p {
             margin: 0;
         }
+
+        img.emoji {
+            height: 1em;
+            width: 1em;
+            margin: 0 .05em 0 .1em;
+            vertical-align: -0.1em;
+        }
     </style>
 </head>
 <body>
