--- a/captionhtml/1984.html
+++ b/captionhtml/1984.html
@@ -26,7 +26,7 @@
         }
 
 
-        #speech {
+        #textbox {
             position: absolute;
             left: 60px;
             top: 17px;
